# recoil-sentinel

./: .env.example  .gitignore  HANDOFF.md  MEMORY.md  Makefile  README.md  RECOIL_SENTINEL_PLAN.md  cited.json  cited.md  pyproject.toml  recoil_build_prompt.md  render.yaml  wallet_integrity.md
.github/workflows/: recoil.yml
recoil/: __init__.py  cli.py  config.py  db.py  doctor.py  models.py  seeding.py
recoil/adapters/: __init__.py  ground_truth.py  target.py
recoil/agent/: __init__.py  triage.py  versions.py
recoil/evals/: __init__.py  promotion.py  runner.py
recoil/gate/: __init__.py  engine.py
recoil/judge/: __init__.py  base.py  factory.py  llm_judges.py  mock_judge.py
recoil/sentinel/: __init__.py  agent.py  gate.py  integrations.py  onchain.py  publish.py  sources.py
recoil/tracing/: __init__.py  capture.py
recoil/voice/: __init__.py  verdict.py
scripts/: demo.ps1  demo.sh  seed.py
server/: main.py
tests/: test_gate.py  test_sentinel_gate.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/evals/: page.tsx
web/app/evals/[id]/: page.tsx
web/app/gate/: page.tsx
web/app/traces/: page.tsx
web/app/traces/[id]/: page.tsx
web/app/verify/: page.tsx
web/components/: shell.tsx  test-alert.tsx  ui.tsx  version-context.tsx
web/lib/: api.ts  format.ts  types.ts  use-fetch.ts
